--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
 .App {
-  text-align: center;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: whitesmoke;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App-nav { 
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 10%;
+    background-color: white;
+    padding: 5%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App-nav-style {
+    display: flex;
+    justify-content: center;
+    width: 60%;
+    align-items: center;
+    /* padding: 5%;
+    border-radius: 2%; */
 }
+.App-input {
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.App-search-button{
+    display: flex;
+    width: 60px;
+    padding: 30px;
+    margin-bottom: 45px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-search-img{
+    display: flex;
+    object-fit: contain;
 }
