--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
     width: 100%;
     height: 100%;
     background-color: whitesmoke;
+    flex-direction: column;
+    align-items: center;
 }
 .App-nav { 
     display: flex;
@@ -10,26 +12,33 @@
     width: 100%;
     height: 10%;
     background-color: white;
-    padding: 5%;
+    padding: 5% 0;
 }
 .App-nav-style {
     display: flex;
     justify-content: center;
-    width: 60%;
+    width: 40%;
     align-items: center;
-    /* padding: 5%;
-    border-radius: 2%; */
 }
-.App-input {
-
-}
-.App-search-button{
+.App-search-button {
     display: flex;
     width: 60px;
     padding: 30px;
     margin-bottom: 45px;
 }
-.App-search-img{
+.App-search-img {
     display: flex;
     object-fit: contain;
+}
+.App-search-img:hover {
+    cursor: pointer;
+}
+.App-card {
+    display: flex;
+    width: 50%;
+    flex-wrap: wrap;
+    /* flex-direction: column; */
+    justify-content: center;
+    align-items: flex-end;
+    align-content: center;
 }
