--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
     display: flex;
     width: 100%;
     height: 100%;
-    background-color: whitesmoke;
+    background-color: lightblue;
+    background-image: linear-gradient( lightblue, rgb(94, 150, 158) );
     flex-direction: column;
     align-items: center;
 }
@@ -37,7 +38,6 @@
     display: flex;
     width: 50%;
     flex-wrap: wrap;
-    /* flex-direction: column; */
     justify-content: center;
     align-items: flex-end;
     align-content: center;
