--- a/src/Card.css
+++ b/src/Card.css
@@ -9,7 +9,7 @@
     background-color: white;
     border-radius: 5px;
     align-items: center;
-    padding: 35px;
+    padding: 25px;
 }
 .Card-container-img {
     display: flex;
@@ -23,4 +23,28 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.Card-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: inherit;
+}
+.Card-arrow {
+    width: 25px;
+    height: auto;
+    margin-right: 5px;
+}
+.Card-notsearch {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 10px;
+    height: 255px;
+    width: 200px;
+    border: 1px solid rgb(218, 218, 218);
+    background-color: white;
+    border-radius: 5px;
+    align-items: center;
+    padding: 60px;
 }
